[package]
name = "1password"
version = "0.1.0"
description = "Rust wrapper for 1password op command line utility"
authors = ["Brian Olsen <brian@maven-group.org>"]
license = "MIT"
repository = "https://github.com/griff/1password.rs"
readme = "README.md"
documentation = "https://docs.rs/1password"
keywords = ["1password", "op"]
categories = ["api-bindings"]

[lib]
name = "_1password"

[dependencies]
error-chain = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
which = "1.0"
